# smbc_ppt_executive_report

./: .gitignore  Dockerfile  README.md  pyproject.toml  report_config.json  requirements.txt  start_dev.bat  start_dev.py  start_dev.sh
input_PPT/: README.md
src/report_generator/: __init__.py  cli.py  config.py  ppt_editor.py  utils.py
tests/: test_ppt_editor.py
web/: Dockerfile.backend  README.md  docker-compose.yml  start_backend.py
web/backend/: main.py
web/frontend/: package-lock.json  package.json
web/frontend/public/: index.html
web/frontend/src/: App.js  config.js
